kustomize/observability/kibana/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: system-observability
spec:
  parentRefs:
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - kibana.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: kibana-kibana
          port: 5601
